# hunchproof

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
brand/: HUNCHPROOF_brand.md
docs/: ARCHITECTURE.md  GLOSSARY.md  MECHANISM.md  ROADMAP.md  STATUS.md
product/: commitment_reference.py  hunchproof_app.html  ingestion.py  live_odds_source.py  mvp_schema.sql  pof_backend.py  predict_terminal.html  run_local.sh
reports/: lock_scan_report.md  phase0_REAL_per_match.csv  phase0_REAL_report.md  phase0_per_match.csv  phase0_report.md  phase1_report.md
research/: engine.py  lock_scan.py  phase0.py  phase1.py  simulate.py  simulate_alpha.py
research/real_data/: README.md
tests/: integration_test.py  pof_e2e_test.py
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/public/: site.webmanifest
web/src/: App.tsx  config.ts  index.css  main.tsx  models.ts  router.tsx
web/src/api/: client.ts  derive.ts  queries.ts  types.ts
web/src/components/landing/: HeroVisual.tsx
web/src/components/layout/: ConnBadge.tsx  Countdown.tsx  ErrorBoundary.tsx  TopBar.tsx
web/src/components/portfolio/: OpenCommitments.tsx  RevealDialog.tsx  (+1 more)
web/src/demo/: crowd.ts  data.ts
web/src/hooks/: useCommitVault.ts  useCountdown.ts  useToast.tsx  useUser.ts
web/src/lib/: commitment.test.ts  commitment.ts  format.ts  scoring.test.ts  scoring.ts  slate.ts  theme.ts
web/src/views/: LandingView.tsx  LeaderboardsView.tsx  OracleView.tsx  PortfolioView.tsx  SlateView.tsx  landing.css
(+19 files in other folders)
